# processador_doc

./: .gitignore  CLAUDE.md  INSTALL-WINDOWS.md  atualizar.ps1  empacotar.ps1  instalar.ps1  servico.ps1
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  seed_quarentena.py  seed_revisao.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ingestion.py  0003_extractions.py  0004_templates_classification.py  0005_confidence_review.py  0006_automations.py  0007_automation_pipeline.py  0008_automations_final.py  0009_split_to_files.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  automations.py  config.py  documents.py  templates.py  watched_folders.py  watcher_status.py
backend/app/automation/: __init__.py  executor.py  fileops.py  naming.py  pipeline.py  rules.py  stage.py  undo.py
backend/app/classification/: __init__.py  confidence.py  filler.py  matcher.py  openai_client.py  schema.py  stage.py
backend/app/extraction/: __init__.py  openai_client.py  pdf_io.py  (+3 more)
backend/scripts/: reprocess_one_block.py  seed_demo_classification.py
backend/tests/: conftest.py  test_api_automations.py  test_api_config.py  test_api_documents.py  test_api_review.py  test_api_templates.py  test_api_watched_folders.py  test_api_watcher_status.py  test_cas.py  test_config.py  test_db.py  test_dedup_gate.py  test_ingest_stage.py  test_migrations.py  test_models.py  test_queue.py  test_split_to_files.py  test_splitter.py  test_stabilizer.py  test_state_machine.py  test_static_spa.py  test_watcher.py
(+336 files in other folders)
