[project]
name = "processador-documentos"
version = "0.1.2"
description = "Processador de Documentos — backend (FastAPI + SQLite WAL), single-tenant, Windows-first"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn[standard]==0.40.*",
    "pydantic==2.13.4",
    "pydantic-settings",
    "sqlalchemy==2.0.*",
    "alembic==1.18.4",
    "watchfiles==1.2.0",
    "pikepdf==10.8.0",
    "openai==2.41.*",
    "pymupdf==1.27.*",
    "python-dateutil==2.9.0.post0",
    "regex==2026.5.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Migrações são artefatos gerados pelo Alembic (templates/autogenerate);
# não as reformatamos para não divergir da saída padrão da ferramenta.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
